Update basictags.html content and formatting
Removed comment about university affiliation and added a newline at the end of the file.

--- a/program1/basictags.html
+++ b/program1/basictags.html
@@ -10,7 +10,7 @@
         <p> KMCT ITM refers to KMCT Institute of Technology & Management in Kuttippuram, 
             Malappuram, Kerala, which is an educational institution offering various programs in engineering, 
             technology, and management. It provides B.Tech, BBA, BCA, MCA, MBA, and diploma programs, 
-            and is affiliated with APJ Abdul Kalam Technological University. 
+            <!-- and is affiliated with APJ Abdul Kalam Technological University.  -->
             The institution focuses on developing technological expertise and a culture of innovation 
             through a quality education system</p>
             <img src ="kmct.jpg" alt="image" width="1300" height="550">
@@ -44,4 +44,5 @@
                 </tr>
             </table></center>
     </body>
+
 </html>
