--- a/program3/tree.html
+++ b/program3/tree.html
@@ -6,9 +6,10 @@
     </head>
         <body>
             <h2>Tree</h2>
-            <p> tree is a perennial plant with an elongated stem </p>
+            <p> Tree is a perennial plant with an elongated stem </p>
             <img src="tree.jpeg" alt="tree" height="60%" width="60%" >
 
         </body>
     </head>
+
 </html>
